--- a/src/components/infopages/products/Concierge.astro
+++ b/src/components/infopages/products/Concierge.astro
@@ -4,6 +4,7 @@ import Pricing from "../../landing/Pricing.astro";
 import Faq from "./components/faq.astro";
 import Testimonial from "./components/ProduuctTestimonials.astro";
 import Integration from "./components/Integration.astro";
+import Discover from './components/discover.astro'
 ---
 
 <section class="bg-g max-w-6xl mx-auto justify-center text-gray-800">
@@ -38,7 +39,7 @@ import Integration from "./components/Integration.astro";
 
   <!-- Features Section -->
   <div class="features-section text-center container mx-auto py-16 px-4">
-    <h2 class="text-3xl font-bold text-center mb-8 text-black">Key Features</h2>
+    <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">Key Features</h2>
     <div>
       <div
         class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3"
@@ -262,122 +263,12 @@ import Integration from "./components/Integration.astro";
   </div>
 
   <!-- Discover Section -->
-  <section class="py-16 bg-white">
-    <div class="container mx-auto px-4 text-center">
-      <h2 class="text-3xl font-bold text-gray-800 mb-8">
-        Discover How AI Concierge is Transforming Hospitality
-      </h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Card 1 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-          <img
-            src="/images/Discover/appoitment.webp"
-            alt="Personalized Recommendations"
-            class="w-full h-48 object-cover rounded-t-lg mb-4"
-          />
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">
-            Personalized Recommendations
-          </h3>
-          <p class="text-gray-600 mb-4">
-            Enhance customer satisfaction with curated suggestions for
-            entertainment, dining, and activities.
-          </p>
-          <!-- <a
-              href="#"
-              class="text-black font-medium flex items-center justify-center"
-            >
-              Learn More
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="w-4 h-4 ml-2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
-              </svg>
-            </a> -->
-        </div>
-        <!-- Card 2 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-          <img
-            src="/images/Discover/customer_feedback.webp"
-            alt="Effortless Coordination"
-            class="w-full h-48 object-cover rounded-t-lg mb-4"
-          />
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">
-            Effortless Coordination
-          </h3>
-          <p class="text-gray-600 mb-4">
-            Simplify event coordination and guest support with automated
-            workflows.
-          </p>
-          <!-- <a
-              href="#"
-              class="text-black font-medium flex items-center justify-center"
-            >
-              Learn More
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="w-4 h-4 ml-2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
-              </svg>
-            </a> -->
-        </div>
-        <!-- Card 3 -->
-        <div class="bg-white shadow-lg rounded-lg p-6">
-          <img
-            src="/images/Discover/outbound_lead.webp"
-            alt="Advanced Reporting"
-            class="w-full h-48 object-cover rounded-t-lg mb-4"
-          />
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">
-            Advanced Reporting
-          </h3>
-          <p class="text-gray-600 mb-4">
-            Monitor service metrics and optimize your offerings with detailed
-            analytics.
-          </p>
-          <!-- <a
-              href="#"
-              class="text-black font-medium flex items-center justify-center"
-            >
-              Learn More
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                class="w-4 h-4 ml-2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
-              </svg>
-            </a> -->
-        </div>
-      </div>
-    </div>
-  </section>
+<Discover />
 
   <!--  Slider -->
   <section class="my-12 py-12 px-6">
     <div class="text-left gap-10 mb-8 flex justify-between">
-      <h2 class="text-5xl font-bold mb-4 text-black">
+      <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">
         Connect CallSupport to Your Existing System
       </h2>
       <p class="text-gray-500 max-w-2xl text-2xl mx-auto mb-8">
