--- a/src/components/infopages/products/components/Integration.astro
+++ b/src/components/infopages/products/components/Integration.astro
@@ -1,8 +1,8 @@
 <div class="bg-white py-16 px-4">
     <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-3xl font-extrabold text-black mb-8">
+      <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mb-8">
        CallSupport Solutions for Industries
-      </h2>
+      </p>
     </div>
     <div
       class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-7xl mx-auto"
@@ -16,7 +16,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Hospitality</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Hospitality</h3>
       </div>
 
       <!-- Card 2 -->
@@ -28,7 +28,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Real Estate</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Real Estate</h3>
       </div>
 
       <!-- Card 3 -->
@@ -40,7 +40,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Recruitment</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Recruitment</h3>
       </div>
 
       <!-- Card 4 -->
@@ -52,7 +52,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Healthcare</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Healthcare</h3>
       </div>
 
       <!-- Card 5 -->
@@ -64,7 +64,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Solar</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Solar</h3>
       </div>
 
       <!-- Card 6 -->
@@ -76,7 +76,7 @@
             class="h-30 w-30 mx-auto"
           />
         </div>
-        <h3 class="text-black font-bold text-lg">CallSupport for Car Dealership</h3>
+        <h3 class="text-lg font-semibold leading-6 text-black font-display tracking-tight">CallSupport for Car Dealership</h3>
       </div>
     </div>
   </div>
