--- a/src/components/infopages/products/components/ProduuctTestimonials.astro
+++ b/src/components/infopages/products/components/ProduuctTestimonials.astro
@@ -1,16 +1,16 @@
 <div class="min-w-screen   flex items-center justify-center py-5">
     <div class="w-full bg-white  px-5 py-16 md:py-24 text-gray-500">
         <div class="w-full max-w-6xl mx-auto">
-            <div class="text-center max-w-xl mx-auto">
-                <h1 class="text-6xl md:text-7xl font-bold mb-5 text-black">What people <br>are saying.</h1>
-                <h3 class="text-xl mb-5 font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-                <!-- <div class="text-center mb-10">
+            <div class="text-center max-w-xl mx-auto mb-8">
+                <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display ">What people are saying.</p>
+                <!-- <h3 class="text-xl mb-5 font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> -->
+                <div class="text-center mb-10">
                     <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"></span>
                     <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"></span>
                     <span class="inline-block w-40 h-1 rounded-full bg-indigo-500"></span>
                     <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"></span>
                     <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"></span>
-                </div> -->
+                </div>
             </div>
             <div class="-mx-3 md:flex items-start">
                 <div class="px-3 md:w-1/3">
