--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -5,7 +5,7 @@
     <div class="mx-auto max-w-xl text-center">
       <div>
         <p
-          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
+          class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display"
         >
           What are business building with Call Support
         </p><p
