icons and projects bd images updated

--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -15,7 +15,7 @@ import Discover from './components/discover.astro'
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-top rounded-lg"
-      style="background-image: url('/images/Industry/ai.jpeg');"
+      style="background-image: url('/images/projects/AlReceptionist.png');"
     >
     </div>
     <!-- Light Color Overlay -->
