--- a/src/components/infopages/products/Concierge.astro
+++ b/src/components/infopages/products/Concierge.astro
@@ -15,7 +15,7 @@ import Discover from './components/discover.astro'
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center rounded-lg"
-      style="background-image: url('/images/Industry/concierge-services.jpg');"
+      style="background-image: url('/images/projects/AI Concierge Service.png');"
     >
     </div>
     <!-- Light Color Overlay -->
@@ -39,7 +39,7 @@ import Discover from './components/discover.astro'
 
   <!-- Features Section -->
   <div class="features-section text-center container mx-auto py-16 px-4">
-    <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">Key Features</h2>
+    <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mb-8">Key Features</h2>
     <div>
       <div
         class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3"
@@ -50,23 +50,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Personalized Assistance.svg" alt="Personalized Assistance" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -86,23 +70,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Seamless Bookings.svg" alt="Seamless Bookings" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -122,23 +90,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/24 Availability.svg" alt="24 Availability" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -158,23 +110,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Real-Time Updates.svg" alt="Real-Time Updates" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -194,23 +130,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Multilingual Support.svg" alt="Multilingual Support" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -229,23 +149,7 @@ import Discover from './components/discover.astro'
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Intelligent Suggestions.svg" alt="Intelligent Suggestions" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
