--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -50,23 +50,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Instant Response.svg" alt="Instant Response" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -86,23 +70,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Cost-Efficient.svg" alt="Cost-Efficient" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -122,23 +90,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/24 Availability.svg" alt="24 Availability" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -157,23 +109,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Scalable Solutions.svg" alt="Scalable Solutions" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -192,23 +128,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Multilingual Support.svg" alt="Multilingual Support" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
@@ -227,23 +147,7 @@ import Discover from "./components/discover.astro";
             <div
               class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
             >
-              <!-- Icon (can be replaced with your desired one) -->
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="#6271fc"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
-                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
-                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
-                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
-              </svg>
+            <img src="/images/svgs/Intelligent Routing.svg" alt="Intelligent Routing" />
             </div>
             <p
               class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
