blogs and anual pricing added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -85,7 +85,21 @@ const blogs = [
     link: "/What-Is-he-Hardest-Question-to-Ask-AI",
   },
   
-
+  {
+    id: 13,
+    title: "To AI Answering Service for 2024 Rapid Response with AI",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog12.png",
+    link: "/To-AI-Answering-Service-for-2024-Rapid-Response-with-AI",
+  },
+  {
+    id: 14,
+    title: "How Much Does an AI Virtual Receptionist Cost?",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog 14.png",
+    link: "/How-Much-Does-an-AI-Virtual-Receptionist-Cost?",
+  },
+  
 ];
 
 ---
