blogs and anual pricing added

--- a/src/components/landing/components/annual.astro
+++ b/src/components/landing/components/annual.astro
@@ -4,7 +4,7 @@ class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-
 <section class="flex flex-col px-6  lg:py-8 rounded-3xl bg-gray-50">
   <h3 class="mt-5 text-lg text-black font-display">Free Plan</h3>
   <p class="mt-2 text-sm text-gray-500">
-    Best for testing out our tools.
+    Best for testing out our tool.
   </p>
   <p
     class="order-first text-5xl font-light tracking-tight text-black font-display"
